tests/negative/traits/invoke_dyn_method_not_found.orng
// invoke_dyn_method_not_found.orng:15:8: error: the type `&dyn My_Trait` does not implement the method `get_int`
//     x.>get_int()
//       ^
// 
trait My_Trait { }

impl My_Trait for Int { }

fn main() -> Int {
    let x: Int = 4
    f(&x)
}

fn f(x: &dyn My_Trait) -> Int {
    x.>get_int()
}